# Minesweeper-old

./: .clang-format  .gitignore  CMakeLists.txt  Minesweeper.sln  Readme.md  action.cpp  action.h  ask.cpp  ask.h  board.cpp  board.h  cell.cpp  cell.h  cells.cpp  cells.h  column.cpp  column.h  columnoffsets.h  columns.cpp  columns.h  combos.cpp  combos.h  computer.cpp  computer.h  concealed.h  deadly.h  dimensions.h  evaluation.cpp  evaluation.h  filter.cpp  filter.h  flagged.h  game.cpp  game.h  getline.cpp  group.cpp  group.h  hazard.h  human.cpp  human.h  (+71 more)
Minesweeper/: Minesweeper.vcxproj  Minesweeper.vcxproj.filters  board.cpp  board.h  main.cpp  mines.cpp  mines.h  move.cpp  move.h  position.cpp  positions.cpp  print.cpp  print.h  rules.txt  uncover.cpp  uncover.h
include/: ask.h  board.h  cells.h  combos.h  getline.h  group.h  move.h  negligible.h  neighbor.h  only.h  play.h  player.h  position.h  preparation.h  print.h  reveal.h  revealed.h  rows.h  severity.h  state.h  threat.h
include/game/: play.h
include/io/: print.h
include/move/: mark.h  parse.h  reveal.h
include/player/: choose.h  computer.h  human.h
src/: cells.cpp  column.cpp  filter.cpp  getline.cpp  group.cpp  main.cpp  mined.cpp  move.cpp  parse.cpp  play.cpp  player.cpp  position.cpp  preparation.cpp  print.cpp  reveal.cpp  rows.cpp  state.cpp  threat.cpp  to_string.cpp
src/game/: play.cpp
src/io/: print.cpp
src/move/: mark.cpp  parse.cpp  reveal.cpp
src/player/: choose.cpp  computer.cpp  human.cpp
