cmake_minimum_required (VERSION 3.0)

project (Minesweeper CXX)
set (CMAKE_CXX_STANDARD 14)

add_executable (
  ${PROJECT_NAME}
  action.cpp
  action.h
  ask.h
  board.cpp
  board.h
  cell.h
  cells.cpp
  cells.h
  column.cpp
  column.h
  columns.cpp
  columns.h
  combos.cpp
  combos.h
  computer.cpp
  computer.h
  concealed.h
  deadly.h
  filter.cpp
  filter.h
  game.cpp
  game.h
  getline.cpp
  getline.h
  group.cpp
  group.h
  hazard.h
  main.cpp
  marked.h
  mine.cpp
  mine.h
  move.cpp
  move.h
  negligible.h
  neighbor.h
  oneof.h
  only.h
  parse.cpp
  parse.h
  player.cpp
  player.h
  position.cpp
  position.h
  positions.cpp
  positions.h
  preparation.cpp
  preparation.h
  print.cpp
  print.h
  reveal.cpp
  reveal.h
  revealed.h
  row.cpp
  row.h
  rows.cpp
  rows.h
  severity.cpp
  severity.h
  state.cpp
  state.h
  take.h
  threat.cpp
  threat.h
  to_string.cpp
  to_string.h
  Readme.md
  )
